--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node app.js"
+    "migrate": "prisma migrate dev --name",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
